class for humanoid creatures created made hero orange for now

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="title">BC-Boy</h1>
     <p id="description">brief description</p>
     <canvas id="game-area"></canvas>
+    <h1 id="play">Play</h1>
     <h6 id="footer">By Corey Wilson</h6>
 
     <script src="app.js"></script>
