--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="container"></div>
     <h1 id="title">BC-Boy</h1>
     <p id="description">brief description</p>
+    <P id="level">level</P>
     <canvas id="game-area"></canvas>
     <h1 id="play">Play</h1>
     <h6 id="footer">By Corey Wilson</h6>
-
     <script src="app.js"></script>
 </body>
 </html>
