[app.js] game is winnable and level display shows

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p id="description">brief description</p>
     <P id="level">level</P>
     <canvas id="game-area"></canvas>
-    <h1 id="play">Play</h1>
+    <h1 id="reset">Reset</h1>
     <h6 id="footer">By Corey Wilson</h6>
     <script src="app.js"></script>
 </body>
