[app.js] background image set

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="container"></div>
-    <h1 id="title">BC-Boy</h1>
-    <p id="description">brief description</p>
+    <h1 id="title">Blaster Boy</h1>
+    <p id="description">Move the character using Space, A, D, and F. W moves the character left while D moves the character right. Press the space bar too jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.</p>
     <P id="level">level</P>
     <canvas id="game-area"></canvas>
     <h1 id="reset">Reset</h1>
