[style.css] added styling font

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container"></div>
     <h1 id="title">Blaster Boy</h1>
-    <p id="description">Move the character using Space, A, D, and F. W moves the character left while D moves the character right. Press the space bar too jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.</p>
+    <p id="description">How to play: <br>Move the character using Space, A, D, and F. W moves the character left while D moves the character right. <br>Press the space bar to jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.</p>
     <P id="level">level</P>
     <canvas id="game-area"></canvas>
     <h1 id="reset">Reset</h1>
