--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Syne+Tactile&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
     <h1 id="title">Blaster Boy</h1>
-    <p id="description">How to play: <br>Move the character using Space, A, D, and F. W moves the character left while D moves the character right. <br>Press the space bar to jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.<br> Press the play button to play background music.</p>
+    <p id="description">How to play: <br>Move the character using Space, A, D, and F. W moves the character left while D moves the character right. <br>Press the space bar to jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.<br> Press the play button to start the game.</p>
     <P id="level">level</P>
     <canvas id="game-area"></canvas>
+</div>
+<div id="bottom">
     <h1 id="play">Play</h1>
     <h1 id="reset">Reset</h1>
-    <h6 id="footer">By Corey Wilson</h6>
+    <h1 id="stop">Stop Music</h1>
+    <h6 id="footer">By Corey Wilson</h6></div>
     <script src="js/app.js"></script>
 </body>
 </html>
