[app.js] fixed reset

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
     <h1 id="title">Blaster Boy</h1>
-    <p id="description">How to play: <br>Move the character using Space, A, D, and F. W moves the character left while D moves the character right. <br>Press the space bar to jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.<br> Press the play button to start the game.</p>
+    <p id="description">How to play: <br>Move the character using Space, A, D, and F. A moves the character left while D moves the character right. <br>Press the space bar to jump and the F key to shoot.  <br>Make it to the flag pole to move on to the next level and avoid enemies or shoot them to clear obstacles.<br> Press the play button to start the game.</p>
     <P id="level">level</P>
     <canvas id="game-area"></canvas>
 </div>
